--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         // ========================================
         // CONFIGURAÇÃO
         // ========================================
-        const ANP_API_URL = 'https://anp-gru.vercel.app/api/prices';
+        const ANP_API_URL = 'https://anp-gru.vercel.app/api/prices.json';
         const RATIO_THRESHOLD = 0.70;
 
         // Centro de Guarulhos
