--- a/admin.html
+++ b/admin.html
@@ -337,7 +337,26 @@
             </div>
         </div>
     </div>
+    <!-- No arquivo admin.html -->
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin - CMG Postos</title>
+    <link rel="stylesheet" href="css/admin.css">
     
+    <!-- Biblioteca SheetJS para ler arquivos Excel -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+</head>
+<body>
+    <!-- ... conteúdo do admin ... -->
+    
+    <!-- Seu script admin.js deve vir DEPOIS do SheetJS -->
+    <script src="js/admin.js"></script>
+</body>
+</html>
     <!-- Scripts -->
     <script src="data.js"></script>
     <script src="admin.js"></script>
